--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -11,12 +11,10 @@
         android:id="@+id/mapFrag_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/selectorFrag_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/selectorFrag_container"
-        >
-
+        app:layout_constraintTop_toTopOf="parent">
     </FrameLayout>
 
     <FrameLayout
